--- a/dungeon-friend/src/App.css
+++ b/dungeon-friend/src/App.css
@@ -7,14 +7,17 @@ body {
   font-family: 'Quicksand', sans-serif;
   background-color: white;
   min-width: 70rem;
+  margin: 0;
 }
 
 canvas {
-  background-color: #0000
+  background-color: #0000;
 }
 
 ul {
   list-style-type: none;
+  margin-top: 0;
+  text-align: right;
 }
 
 li {
@@ -26,32 +29,30 @@ li {
   padding: 0;
   border: none;
   text-align: center;
-  display: inline-flex;
-  right: 37.5%;
+  display: inline-grid;
+  position:relative;
+  z-index: -1;
 }
 
-.site-name {
-  font-family: 'Monoton', cursive;
-  font-size: 300%;
-  color: White;
-  position: absolute;
-  top: 4rem;
-  left: 21.5%;
-
+.logo {
+  position: relative;
+  left: 12.5%;
+  z-index: 0;
 }
 
 .navbar {
   height: 13rem;
   background-color: black;
   border-bottom: solid #333;
+  position: sticky;
+  top: -208px;
 }
 
 .navigation-btns-container {
   display: block;
-  position: absolute;
-  top: 10.1rem;
-  right: 2.5rem;
-  width: 29rem;
+  position: sticky;
+  top: 0;
+  background: black;
 }
 
 .navigation-btns {
@@ -59,7 +60,7 @@ li {
   border: 1px solid black;
   background-color: black;
   color: white;
-  font-size: 1.1em;
+  font-size: 1.4em;
   display: inline;
   transition-duration: 0.2s;
   -webkit-transition-duration: 0.2s;
@@ -72,4 +73,33 @@ li {
 
 .navigation-btns:active {
   transform: translateY(1px);
+}
+
+.site-name {
+  font-family: 'Monoton', cursive;
+  font-size: 300%;
+  color: White;
+  position: absolute;
+  top: 4rem;
+  left: 21.152%;
+}
+
+.welcome-text {
+  text-align: center;
+  font-family: 'Monoton', sans-serif;
+  position: absolute;
+  top: 38%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 4em;
+  background-color: #00000000;
+  color: #fff;
+  text-shadow: 1px 1px black;
+  opacity: 1;
+  transition: 2s;
+}
+
+.welcome-text.hidden {
+  opacity: 0;
+  transition: 3s;
 }
