--- a/src/App.css
+++ b/src/App.css
@@ -56,16 +56,37 @@ li.nav-items {
 
 .card {
   border-style: solid;
+  border-radius: 2%;
   border-width: 1px;
-  border-color: black;
+  border-color: #1B1C1D;
+  box-shadow: 2px 2px #E8BAE6;
   padding: 20px;
   text-align: center;
+  color: #1B1C1D;
+  font-size: 1em;
 }
 
 .card:hover {
   overflow: hidden;
-  font-size: 1.05em;
+}
+
+.card:hover h2 {
+  font-size: 2em;
   transition: 0.2s;
+}
+
+.card:hover h4 {
+  font-size: 1.15em;
+  transition: 0.2s;
+}
+
+.center-text {
+  text-align: center;
+  font-size: 2.5vw
+}
+
+.medium-header {
+  font-size: 1.5vw;
 }
 
 .dice {
@@ -75,15 +96,21 @@ li.nav-items {
   text-align: center;
   display: inline-grid;
   position:relative;
-  z-index: -1;
 }
 
 .display {
   width: 100%;
-  display: inline;
   border-style: solid;
   border-width: 1px;
   padding: 15px;
+}
+
+.display-inline {
+  display: inline-flex;
+  flex-direction: row;
+  vertical-align: top;
+  justify-content: space-between;
+  margin: 0 20px;
 }
 
 .flex-container {
@@ -149,11 +176,9 @@ li.nav-items {
 
 .site-name {
   font-family: 'Monoton', cursive;
-  font-size: 2.5rem;
+  font-size: 3vw;
   color: white;
-  position: absolute;
-  top: 2.3rem;
-  left: 3%;
+  display: inline-flex;
 }
 
 .tile {
@@ -161,14 +186,21 @@ li.nav-items {
   min-width: 12%;
   padding: 0.5em;
   border-style: solid;
-  border-color: black;
+  border-color: #1B1C1D;
+  border-radius: 5%;
   margin: 0.5em;
 }
 
 .tile:hover {
   cursor: default;
   color: white;
-  background-color: black;
+  background-color: #1B1C1D;
+}
+
+.ui.inverted.menu {
+  background: #9B6590 !important;
+  border-radius: 0 !important;
+  margin: 0 0 1rem 0;
 }
 
 .welcome {
@@ -198,9 +230,14 @@ li.nav-items {
   transition: 2s;
 }
 
-#black-background {
-  background-color: black;
+#lilac-background {
+  background-color: #9B6590;
+  text-align: center;
   z-index: -2 !important;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 
@@ -209,7 +246,7 @@ li.nav-items {
 .wrapper {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 10px;
+  grid-gap: 15px;
   grid-auto-rows: minmax(100px, auto);
 }
 .one {
