--- a/src/App.css
+++ b/src/App.css
@@ -201,6 +201,7 @@ li.nav-items {
   font-size: 3vw;
   color: white;
   display: inline-flex;
+  padding-top: 2.5vw
 }
 
 .tile {
@@ -220,9 +221,9 @@ li.nav-items {
 }
 
 .ui.inverted.menu {
-  background: #9B6590 !important;
+  background: #483263 !important;
   border-radius: 0 !important;
-  margin: 0 0 1rem 0;
+  margin: -2vw 0 3vw 0;
 }
 
 .welcome {
@@ -253,13 +254,13 @@ li.nav-items {
 }
 
 #lilac-background {
-  background-color: #9B6590;
+  background-color: #483263;
   text-align: center;
   z-index: -2 !important;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  align-items: center;
+  padding-top: 1vw;
 }
 
 
