--- a/src/App.css
+++ b/src/App.css
@@ -111,6 +111,15 @@ li.nav-items {
   margin: 0 20px;
 }
 
+.draggable {
+  font-size: 1.2em;
+  border: 1px solid black;
+  border-radius: 5%;
+  width: 2em;
+  text-align: center;
+  margin: 0.5em;
+}
+
 .flex-container {
   display: flex;
   flex-direction: row;
